--- a/cars/templates/cars/cars.html
+++ b/cars/templates/cars/cars.html
@@ -69,7 +69,7 @@
     <form action="" method="get">
       <div class="form-row">
         <div class="col">
-          <input type="submit" value="Szukaj"  class="form-control" {{ filterset.form }} />
+          <input type="submit" value="Szukaj"  class="form-control"  >{{ filterset.form }}
         </div>
       </div>
     </form>
