--- a/cars/templates/cars/reservation.html
+++ b/cars/templates/cars/reservation.html
@@ -6,7 +6,7 @@
 
   <center>
     <h1>Potwierdz rezerwacje</h1>
-      Edytujesz : {{ car }}
+
     <form action=" "  method="POST">
         {% csrf_token %}
         {{ form.as_p }}
@@ -25,7 +25,7 @@
 
     </form>
 
-<button onclick="convert_date()">Click me</button>
+<button onclick="convert_date()">Sprawdz koszt</button>
         <p id="demo"></p>
 
 
