--- a/templates/base.html
+++ b/templates/base.html
@@ -4,32 +4,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Rentacar</title> <!-- To jest komentarz -->
+    <title>Rentacar</title>
     <meta name="description" content="Rentacar">
     <meta name="keywords" content="Rentacar"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> <!-- sprawia że jest kompatybilny z explorerem-->
-<!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/hero-banner.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-
     <link href="{% static 'cars/styles/style.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'cars/styles/hero-banner.css' %}" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,400;1,900&display=swap" rel="stylesheet"> <!-- podłącza fonty-->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,400;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- reguluje rozdzielczość dla urządzeń mobilnych-->
-<!--   dodaje ikonki-->
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-
 {% include 'snippets/navbar.html' %}
 {% include 'snippets/header.html' %}
 
-
-
-<!-- Body -->
 <style type="text/css">
 	.main{
 		min-height: 100vh;
@@ -37,13 +30,13 @@
         margin-top: 96px ;
 	}
 </style>
+
 <div class="main">
 
 	{% block content %}
 
 	{% endblock content %}
 </div>
-<!-- End Body -->
 
 {% include 'snippets/footer.html' %}
 
@@ -55,8 +48,5 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 
-
 </body>
-
-
 </html>
