--- a/cars/templates/cars/reservation.html
+++ b/cars/templates/cars/reservation.html
@@ -1,84 +1,44 @@
 {% extends "base.html" %}
-
-
 {% block content %}
-
-
   <center>
     <h1>Potwierdz rezerwacje</h1>
-
     <form action=" "  method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-
-
-        marka :  {{ car.mark }} <br/>
-        model :  {{ car.model }} <br/>
-        kolor :  {{ car.color }} <br/>
-        koszt : <div id="koszt">{{ car.daily_rental_cost }}</div><br/>
-
+        marka :  <div id="mark">{{ car.mark }} <br/></div>
+        model :  <div id="model">{{ car.model }} <br/></div>
+        kolor :  <div id="color">{{ car.color }} <br/></div>
+        koszt : <div id="cost">{{ car.daily_rental_cost }}</div><br/>
         rok produkcji : {{ car.year_of_production }} <br/>
         status : {{ car.car_is_rented }} <br/>
         lokalizacja : {{ car.facility_allocation }} <br/>
-
         <button class="btn btn-outline-danger shadow-p p-3 mb-5 bg-red rounded" type="submit">Potwierdz</button>
-
     </form>
-
-<button onclick="convert_date()">Sprawdz koszt</button>
-        <p id="demo"></p>
-
-
-
-<!--            {% csrf_token %}-->
-<!--            {{ form.as_p }}-->
-
-<!--            <label for="day_started">  Dzien startu: </label></br>-->
-<!--            <input type="datetime-local" id="day_started" name="day_started" value=" day_started ">-->
-
-<!--        <label for="day_ended">  Dzien zakonczenia: </label></br>-->
-<!--            <input type="datetime-local" id="day_ended" name="day_ended" value=" day_ended ">-->
-<!--            {% if submitted %}-->
-<!--            <p> {{ event.event_value }} </p>-->
-<!--        </form>-->
-<!--        {% endif %}-->
-<!--        <br/>-->
-<!--        <br>-->
-
-
-
-
-        
-
-
-
+    <button onclick="convert_date()">Sprawdz koszt</button>
+            <p id="result"></p>
   </center>
-
 
 <script type="text/javascript">
     function convert_date(){
         day_1=document.getElementById("id_day1").value
         day_2=document.getElementById("id_day2").value
-        var koszt1 = document.getElementById('koszt');
-        koszt2 = koszt1.innerHTML
-        console.log(koszt2)
+        var cost = document.getElementById('cost').innerHTML;
+
+        console.log(cost)
         console.log(day_1)
         console.log(day_2)
 
-        var d = Date.parse(day_1);
+        var date1_in_ms = Date.parse(day_1);
+        console.log(date1_in_ms); //this is in milliseconds
+        var date2_in_ms = Date.parse(day_2);
+        console.log(date2_in_ms); //this is in millisecond
 
-        console.log(d); //this is in milliseconds
-        var b = Date.parse(day_2);
-        console.log(b); //this is in millisecond
-
-        var c = b - d
-        console.log(c)
-        diffDays = Math.ceil(c / (1000 * 60 * 60 * 24));
-        prize = diffDays * koszt2
-        console.log(diffDays)
-        document.getElementById("demo").innerHTML = prize;
+        var diff_dates = date2_in_ms - date1_in_ms
+        console.log(diff_dates)
+        diff_days = Math.ceil(diff_dates / (1000 * 60 * 60 * 24));
+        price = diff_days * cost
+        console.log(diff_days)
+        document.getElementById("result").innerHTML = price;
         }
-
-
 </script>
 {% endblock %}
